--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -74,3 +74,10 @@
     font-size: 1.25rem;
     font-weight: 600;
 }
+
+@media screen and (max-width: 719px) {
+    .Modal{        
+        align-items: flex-start;
+        padding-top: 50px;
+    }
+}
